--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -1,37 +1,51 @@
-/*Gallery.css*/
+/* Gallery.css */
 .gallery-container {
-    max-height: 80vh;
-    overflow-y: auto;
-    background-color: #102C57;
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-  
-  .gallery-card {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: #102C57;
-    border: 1px solid #ffffff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-  }
-  
-  .gallery-card img {
-    height: 300px;
-    object-fit: cover;
-  }
-  
-  .gallery-card .card-body {
-    flex-grow: 1;
-  }
-  
-  .card-link {
-    color: #FFC470;
-    text-decoration: none;
-  }
-  
-  .card-link:hover {
-    color: #DD5746;
-  }
-  
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.h1 {
+  color: #41099a !important;
+  font-size: 30px;
+  font-weight: bold;
+  margin: auto;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.gallery-container > :not(.row) {
+  margin-bottom: 1rem; 
+}
+
+.row {
+  margin-top: -1rem; 
+}
+
+.gallery-card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #102C57;
+  border: 1px solid #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.gallery-card img {
+  height: 300px;
+  object-fit: cover;
+}
+
+.gallery-card .card-body {
+  flex-grow: 1;
+}
+
+.card-link {
+  color: #FFC470;
+  text-decoration: none;
+}
+
+.card-link:hover {
+  color: #DD5746;
+}
